--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -14,3 +14,4 @@
       %h4= rl.title
       %p $ #{rl.amount}
       %p= rl.details
+      = link_to "Pledge", new_reward_level_order_path(rl), class: "btn btn-primary"
