--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,10 @@
   %head
     %title Crowdfunding
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag "https://js.stripe.com/v1", 'application', 'data-turbolinks-track' => true
     %script{src: "//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry", type: "text/javascript"}
     %script{src: "//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js", type: "text/javascript"}
+    = tag :meta, name: "stripe-key", content: ENV["STRIPE_PUBLISHABLE_KEY"]
     = csrf_meta_tags
   %body
     .container
